--- a/Persona4GoldenHelper/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Pages/Accessories.razor
@@ -2,28 +2,28 @@
 @inject HttpClient Http;
 
 <div class="content-normal">
+    <SearchBox @ref="SearchBox" />
+
     <h1>Accessories</h1>
-    <table>
-        <thead>
-            <tr>
+    @if (SearchBox != null)
+    {
+        <FilterableTable TContent=Accessory Content=AllAccessories SearchBox="SearchBox" IncludeTBodyTag=false>
+            <HeaderRow>
                 <th>Name</th>
                 <th>Effect</th>
                 <th class="text-align-centre">Price</th>
                 <th>How to Obtain</th>
-            </tr>
-        </thead>
-        @if (AllAccessories != null)
-            foreach (var accessory in AllAccessories)
-            {
+            </HeaderRow>
+            <ContentRow>
                 <tbody class="alternate-colour">
-                    @for (int i = 0; i < accessory.Obtained.Count; i++)
+                    @for (int i = 0; i < context.Obtained.Count; i++)
                     {
-                        var obtain = accessory.Obtained[i];
+                        var obtain = context.Obtained[i];
                         <tr>
                             @if (i == 0)
                             {
-                                <td rowspan=@accessory.Obtained.Count>@accessory.Name</td>
-                                <td rowspan=@accessory.Obtained.Count>@(accessory.Effect == "" ? "-" : accessory.Effect)</td>
+                                <td rowspan=@context.Obtained.Count>@context.Name</td>
+                                <td rowspan=@context.Obtained.Count>@(context.Effect == "" ? "-" : context.Effect)</td>
                             }
 
                             <td class="text-secondary text-align-centre">@(obtain.Price == "" ? "-" : obtain.Price)</td>
@@ -31,16 +31,35 @@
                         </tr>
                     }
                 </tbody>
-            }
-    </table>
+            </ContentRow>
+        </FilterableTable>
+    }
 </div>
 
 @code {
     /*********
+    ** Fields
+    *********/
+    /// <summary>A reference to the search box.</summary>
+    private SearchBox _SearchBox;
+
+    /// <summary>All the accessories to display.</summary>
+    private List<Accessory> AllAccessories;
+
+    
+    /*********
     ** Accessors
     *********/
-    /// <summary>All the accessories to display.</summary>
-    public List<Accessory> AllAccessories { get; private set; }
+    /// <summary>A reference to the search box.</summary>
+    public SearchBox SearchBox
+    {
+        get => _SearchBox;
+        set
+        {
+            _SearchBox = value;
+            StateHasChanged();
+        }
+    }
 
 
     /*********
