--- a/Persona4GoldenHelper/Pages/SkillCards.razor
+++ b/Persona4GoldenHelper/Pages/SkillCards.razor
@@ -1,89 +1,89 @@
 ﻿@page "/skillcards"
 @inject HttpClient Http;
+@using FilterableKeyValuePair = Persona4GoldenHelper.Models.FilterableKeyValuePair<int, List<Persona4GoldenHelper.Models.SkillCard>>;
 
 <div class="content-narrow">
+    <SearchBox @ref="SearchBox" />
+
     <h1>Skill Cards</h1>
-    
-    <div>
+    @if (SearchBox != null && AllSkillCards != null)
+    {
         <h2 class="text-align-centre">How to Obtain</h2>
         <p class="text-align-centre">Skill cards are obtained via Shuffle Time. Shuffle time can occur at the end of a battle. If you get all the cards in the Shuffle Time you get a Sweep Bonus, a Sweep Bonus means you are guarenteed to get a Shuffle Time after the next battle. Each dungeon has a chance of dropping different skill card, by rank. This can be found below.</p>
-        <table>
-            <thead>
-                <tr>
-                    <th class="text-align-centre column-slim">Dungeon</th>
-                    <th class="text-align-centre column-slim">Skill Card Ranks Found</th>
+        <FilterableTable TContent=SkillCardLocation Content=AllSkillCardLocations SearchBox="SearchBox">
+            <HeaderRow>
+                <th class="text-align-centre column-slim">Dungeon</th>
+                <th class="text-align-centre column-slim">Skill Card Ranks Found</th>
+	    	</HeaderRow>
+            <ContentRow>
+                <tr class="alternate-colour">
+                    <td class="text-align-centre">@context.DungeonName</td>
+                    <td class="text-align-centre">Ranks @context.RankLowerBound-@context.RankUpperBound</td>
                 </tr>
-            </thead>
-            <tbody>
-                @if (AllSkillCardLocations != null)
-                    foreach (var skillCardLocation in AllSkillCardLocations)
-                    {
-                        <tr class="alternate-colour">
-                            <td class="text-align-centre">@skillCardLocation.DungeonName</td>
-                            <td class="text-align-centre">Ranks @skillCardLocation.RankLowerBound-@skillCardLocation.RankUpperBound</td>
-                        </tr>
+	    	</ContentRow>
+	    </FilterableTable>
+
+        @foreach (var type in Enum.GetValues<SkillCardType>())
+        {
+            <h2>@type</h2>
+            <FilterableTable TContent=FilterableKeyValuePair Content=GetSkillCardsByType(type) SearchBox="SearchBox">
+                <HeaderRow>
+                    <th class="text-align-centre column-very-slim">Rank</th>
+                    <th>Skill Cards</th>
+	        	</HeaderRow>
+                <ContentRow>
+                    @{
+                        var rank = context.Key;
+                        var rankSkillCards = context.Value;
                     }
-            </tbody>
-        </table>
-    </div>
-    
-    <div>
-        @if (AllSkillCards != null)
-            foreach (var type in Types)
-            {
-                var skillCards = GetSkillCardsByType(type);
-                <div>
-                    <h2>@type</h2>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th class="text-align-centre column-very-slim">Rank</th>
-                                <th>Skill Cards</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @for (int i = 1; i <= 10; i++)
+
+                    <tr class="alternate-colour">
+                        <td class="text-secondary text-align-centre">@rank</td>
+                        <td>
+                            @if (rankSkillCards.Count == 0)
                             {
-                                var rankSkillCards = GetSkillCardsByRank(skillCards, i);
-    
-                                <tr class="alternate-colour">
-                                    <td class="text-secondary text-align-centre">@i</td>
-                                    <td>
-                                        @if (rankSkillCards.Count == 0)
-                                        {
-                                            @:-
-                                        }
-    
-                                        @for (int j = 0; j < rankSkillCards.Count; j++)
-                                        {
-                                            <span>@rankSkillCards[j].Name</span>@(j != rankSkillCards.Count() - 1 ? ", " : "")
-                                        }
-                                    </td>
-                                </tr>
+                                @:-
                             }
-                        </tbody>
-                    </table>
-                </div>
-            }
-    </div>
+        
+                            @for (int j = 0; j < rankSkillCards.Count; j++)
+                            {
+                                <span>@rankSkillCards[j].Name</span>@(j != rankSkillCards.Count() - 1 ? ", " : "")
+                            }
+                        </td>
+                    </tr>
+	        	</ContentRow>
+	        </FilterableTable>
+        }
+    }
 </div>
 
 @code {
     /*********
     ** Fields
     *********/
-    /// <summary>The types of skill cards.</summary>
-    private static readonly List<string> Types = new() { "Physical", "Magical", "Support", "Passive" };
+    /// <summary>A reference to the search box.</summary>
+    private SearchBox _SearchBox;
+
+    /// <summary>All the skill card locations to display.</summary>
+    private List<SkillCardLocation> AllSkillCardLocations;
+
+    /// <summary>All the skill cards to display.</summary>
+    private List<SkillCard> AllSkillCards;
 
 
     /*********
     ** Accessors
     *********/
-    /// <summary>All the skill card locations to display.</summary>
-    public List<SkillCardLocation> AllSkillCardLocations { get; private set; }
-    
-    /// <summary>All the skill cards to display.</summary>
-    public List<SkillCard> AllSkillCards { get; private set; }
+    /// <summary>A reference to the search box.</summary>
+    public SearchBox SearchBox
+    {
+        get => _SearchBox;
+        set
+        {
+            _SearchBox = value;
+            StateHasChanged();
+        }
+    }
 
 
     /*********
@@ -103,17 +103,10 @@
     /// <summary>Retrieves the skill cards of a specific type.</summary>
     /// <param name="type">The type of skill cards to retrieve.</param>
     /// <returns>The skill cards with a type of <paramref name="type"/></returns>
-    private List<SkillCard> GetSkillCardsByType(string type) =>
+    private List<FilterableKeyValuePair<int, List<SkillCard>>> GetSkillCardsByType(SkillCardType type) =>
         AllSkillCards
-            .Where(skillCard => skillCard.Type.ToString() == type)
-            .ToList();
-
-    /// <summary>Retrieves the skill cards of a specific rank.</summary>
-    /// <param name="skillCards">The skill cards to filter.</param>
-    /// <param name="rank">The rank of skill cards to retrieve.</param>
-    /// <returns>The skill cards from <paramref name="skillCards"/> whose rank is <paramref name="rank"/></returns>
-    private List<SkillCard> GetSkillCardsByRank(List<SkillCard> skillCards, int rank) =>
-        skillCards
-            .Where(skillCard => skillCard.Rank == rank)
+            .Where(skillCard => skillCard.Type == type)
+            .GroupBy(skillCard => skillCard.Rank)
+            .Select(skillCardGroup => new FilterableKeyValuePair(skillCardGroup.Key, skillCardGroup.ToList()))
             .ToList();
 }
