--- a/Persona4GoldenHelper/_Imports.razor
+++ b/Persona4GoldenHelper/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Persona4GoldenHelper.Components
 @using Persona4GoldenHelper.Models
 @using Persona4GoldenHelper.Shared
